--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,8 @@ button{
     </a>
     <nav class="main-nav" id="mainNav">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#" class="active">Contact</a></li>
       </ul>
     </nav>
@@ -135,7 +135,7 @@ button{
     </div>
     <div class="contact-card">
       <h3>Phone</h3>
-      <p>Main: +94 11 2421111<br>Emergency: 119</p>
+      <p>Main: +94 21 2421111<br>Emergency: 119</p>
     </div>
     <div class="contact-card">
       <h3>Email</h3>
@@ -217,3 +217,4 @@ toggle.onclick=()=>nav.classList.toggle("active");
 
 </body>
 </html>
+
