--- a/Inappropriate.html
+++ b/Inappropriate.html
@@ -804,16 +804,16 @@ function checkNumber() {
       <p><b>Status:</b> Pending</p>
     `;
   }
-  else if (phone === "0762485772") {
+  else if (phone === "0787783773") {
     result.innerHTML = `
-      <p><b>Name:</b> Dulana Danuka</p>
+      <p><b>Name:</b> S Lakshan</p>
       <p><b>Case:</b> Inappropriate report</p>
       <p><b>Status:</b> You have to observe for 7 days and take action.</p>
     `;
   }
-  else if (phone === "0741563018") {
+  else if (phone === "0723961531") {
     result.innerHTML = `
-      <p><b>Name:</b> Heshan Manukalpa</p>
+      <p><b>Name:</b> Nethsara Sweshan</p>
       <p><b>Case:</b> Under Investigation</p>
       <p><b>Status:</b> Pending.</p>
     `;
@@ -823,6 +823,20 @@ function checkNumber() {
       <p><b>Name:</b> Amantha Lakshan</p>
       <p><b>Case:</b> Inappropriate report</p>
       <p><b>Status:</b> You have to observe for 7 days and take action.</p>
+    `;
+  }
+   else if (phone === "0773489392") {
+    result.innerHTML = `
+      <p><b>Name:</b> P Sibas</p>
+      <p><b>Case:</b> Under Investigation</p>
+      <p><b>Status:</b> You have to observe for 7 days and take action.</p>
+    `;
+  }
+  else if (phone === "0785590718") {
+    result.innerHTML = `
+      <p><b>Name:</b> Tharusha Shehan</p>
+      <p><b>Case:</b> Inappropriate Visuals reportt</p>
+      <p><b>Status:</b> Police Took The Suspect In To Custody.</p>
     `;
   }
   else {
@@ -835,6 +849,7 @@ function checkNumber() {
 </body>
 </html>
  
+
 
 
 
